--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-email/components": "^0.5.6",
     "moongose": "^1.0.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^6.1.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
