--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-email/components": "^0.5.6",
+    "bcryptjs": "^3.0.2",
     "moongose": "^1.0.0",
     "next": "15.5.4",
     "react": "19.1.0",
