--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-email/components": "^0.5.6",
+    "@react-email/render": "^1.4.0",
     "bcryptjs": "^3.0.2",
     "moongose": "^1.0.0",
     "next": "15.5.4",
